--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
+
+# all meta for files without extension (folders, etc.)
+*.meta
+!*.*.meta
